fixed bug with logo stretching and breaking on orientation change

--- a/res/styles.scss
+++ b/res/styles.scss
@@ -150,6 +150,11 @@ h1, h2, h3, h4 {
   .logo {
     width: 80%;
     margin: 40px 0;
+    flex-shrink: 0;
+
+    @media screen and (orientation:landscape) {
+      display: none;
+    }
   }
 
   .play {
